--- a/css/variables.css
+++ b/css/variables.css
@@ -5,6 +5,7 @@
     --color--four: #e52d2d;
     --color--five: #ffffff;
     --color--six: #ffd733;
+    --color--seven: #1a1a33;
 
     --layout-description-container-x: 10px;
     --layout-description-container-y: 10px;
