--- a/css/variables.css
+++ b/css/variables.css
@@ -1,11 +1,11 @@
 :root{
-    --color--one: #14152d;
-    --color--two: #9499c3;
+    --color--one: #14162C;
+    --color--one--rgba: #191b3fdf;
+    --color--two: #cfcfd1;
     --color--three: #298bfe;
     --color--four: #e52d2d;
     --color--five: #ffffff;
     --color--six: #ffd733;
-    --color--seven: #1a1a33;
 
     --layout-description-container-x: 10px;
     --layout-description-container-y: 10px;
